--- a/photos.html
+++ b/photos.html
@@ -59,7 +59,7 @@
             <div class="image">
                 <img src="img/Photos/ND_Mural.jpg" alt="ND Mural">
             </div>
-            <div class="text">ND Mural</div>
+            <div class="text">Notre Dame Mural</div>
             </div>
         </div>
 
@@ -75,9 +75,9 @@
         <div class="gallery-container w-2">
             <div class="gallery-item">
             <div class="image">
-                <img src="img/Photos/Wood.png" alt="Wood">
+                <img src="img/Photos/Wood.png" alt="Texture of Trees">
             </div>
-            <div class="text">Wood</div>
+            <div class="text"> Texture of Trees</div>
             </div>
         </div>
 
@@ -111,9 +111,9 @@
         <div class="gallery-container w-3 h-2">
             <div class="gallery-item">
             <div class="image">
-                <img src="img/photos/Egg.png" alt="Egg">
+                <img src="img/photos/Egg.png" alt="Dawn Lighting on Egg">
             </div>
-            <div class="text">Egg</div>
+            <div class="text"> Lighting Technique on Egg</div>
             </div>
         </div>
 
