--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,9 @@
 		<a href="https://github.com/Raivenomace" target="_blank"><i class="ri-github-line"></i></a>
 		<a href="https://twitter.com/michael_zang20" target="_blank"><i class="ri-twitter-line"></i></a>
 	</div>
+	
+	<!---scrollreveal effect--->
+	<script src="https://unpkg.com/scrollreveal"></script>
 
 	<!---custom js link--->
 	<script src="js/script.js"></script>
