--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</div>
 
 	<div class="scroll-down">
-		<a href="#"><i class="ri-arrow-down-s-fill"></i></a>
+		<a href="contact.html"><i class="ri-arrow-down-s-fill"></i></a>
 	</div>
 
 	<!---scrollreveal effect--->
