--- a/introduction.html
+++ b/introduction.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="front-page">
+<body class="no-scroll">
 
 	<header>
 		<a href="index.html" class="logo"><i class="ri-macbook-line"></i></a>
@@ -75,6 +75,9 @@
 		<a href="https://twitter.com/michael_zang20" target="_blank"><i class="ri-twitter-line"></i></a>
 	</div>
 
+	<!---scrollreveal effect--->
+	<script src="https://unpkg.com/scrollreveal"></script>
+	
 	<!---custom js link--->
 	<script src="js/script.js"></script>
 
