--- a/tft.html
+++ b/tft.html
@@ -61,6 +61,9 @@
 		<a href="https://twitter.com/michael_zang20" target="_blank"><i class="ri-twitter-line"></i></a>
 	</div>
 
+	<!---scrollreveal effect--->
+	<script src="https://unpkg.com/scrollreveal"></script>
+	
 	<!---custom js link--->
 	<script src="js/script.js"></script>
 
