--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
 	<div class="icons">
 		<a href="https://www.instagram.com/michael_zang20" target="_blank"><i class="ri-instagram-line"></i></a>
-		<a href="https://github.com/Raivenomace" target="_blank"><i class="ri-github-line"></i></a>
+		<a href="https://github.com/mzang20" target="_blank"><i class="ri-github-line"></i></a>
 		<a href="https://twitter.com/michael_zang20" target="_blank"><i class="ri-twitter-line"></i></a>
 	</div>
 
